--- a/projects/pacmanExercise/index.html
+++ b/projects/pacmanExercise/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jorge Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="./images/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="../../images/favicon.svg">
     <link rel="stylesheet" href="../../assets/css/style.css">
     <link rel="stylesheet" href="../../assets/css/fontawesome.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
@@ -72,7 +72,7 @@
                 <!-- START THE CONTENT FOR THE VIDEO -->
                 <div class="col-md-6 intros text-end">
                     <iframe width="90%" height="450"
-                        src="https://www.youtube.com/embed/iJKCj8uAHz8?autoplay=1&mute=1&loop=1">
+                        src="https://www.youtube.com/embed/9OMQmEOLsiI?autoplay=1&mute=1&loop=1">
                     </iframe>
                 </div>
             </div>
