--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
         <div class="col-md-6">
           <div class="bg-white p-4 text-start">
             <p class="fw-light">
-              My name is Jorge Pedraza, I am currently 23 years old and I am from Monterrey, Nuevo León, Mexico. I am a
-              Systems Engineer graduated from Tecmilenio México in 2021. I currently have 2 MBA's, one in finance and
+              My name is Jorge Pedraza, I am currently 23 years old and I am from Monterrey, Nuevo León, México. I am a
+              Systems Engineer graduated from Tecmilenio University in 2021. I currently have 2 MBA's, one in finance
+              and
               the other in marketing, as well as a digital business diploma from Emeritus and various courses in
               robotics, python, 3D design and printing, and Chat GPT.
             </p>
@@ -160,7 +161,26 @@
             <p class=" fw-light pill">
               Microsoft Office
             </p>
-            <h3 style="margin-top: 30px;">Contact</h3>
+            <div class="row">
+            <div class="col-md-4">
+              <h3 style="margin-top: 30px;">Contact</h3>
+            </div>
+            <div class="col-md-8" style="margin-top: 20px; font-size: calc(1.475rem + 1.7vw);" >
+              <a href="https://github.com/JorgePedraza2019" target="_blank"><i class="fab fa-github" style="color: gray;"></i></a>
+              <a href="https://www.linkedin.com/in/jorge-luis-pedraza-valdez-309878152/" target="_blank"><i
+                  class="fab fa-linkedin" style="color: gray;"></i></a>
+              <a href="mailto:jorge_l.pedraza@yahoo.com.mx"><svg style='margin-top: -14px;'
+                  class="contact-box__icon footer-sm display-4 " xmlns="http://www.w3.org/2000/svg"
+                  class="icon icon-tabler icon-tabler-mail-opened" viewBox="0 0 24 24" stroke-width="1" fill="none"
+                  stroke-linecap="round" stroke-linejoin="round">
+                  <path stroke="none" d="M0 0h24v24H0z" fill="gray" />
+                  <polyline points="3 9 12 15 21 9 12 3 3 9" />
+                  <path d="M21 9v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10" />
+                  <line x1="3" y1="19" x2="9" y2="13" />
+                  <line x1="15" y1="13" x2="21" y2="19" />
+                </svg>
+              </a>
+            </div>
             <div class="row">
               <div class="col-md-4" style="margin-top: 20px;">
                 <p style="font-weight: 500;">
@@ -168,9 +188,12 @@
                 </p>
               </div>
               <div class="col-md-8" style="text-align: left;">
-                <p class="fw-light" style="margin-top: 20px;">
-                  JorgePedraza2019
-                </p>
+                <a href="https://github.com/JorgePedraza2019" style="text-decoration: none; color: rgb(84, 84, 255);"
+                  target="_blank">
+                  <p class="fw-light" style="margin-top: 20px;">
+                    JorgePedraza2019
+                  </p>
+                </a>
               </div>
             </div>
             <div class="row">
@@ -180,9 +203,12 @@
                 </p>
               </div>
               <div class="col-md-8" style="text-align: left;">
-                <p class="fw-light">
-                  https://www.linkedin.com/in/jorge-luis-pedraza-valdez-309878152/
-                </p>
+                <a href="https://www.linkedin.com/in/jorge-luis-pedraza-valdez-309878152/"
+                  style="text-decoration: none; color: rgb(84, 84, 255);" target="_blank">
+                  <p class="fw-light">
+                    https://www.linkedin.com/in/jorge-luis-pedraza-valdez-309878152/
+                  </p>
+                </a>
               </div>
             </div>
             <div class="row">
@@ -192,8 +218,11 @@
                 </p>
               </div>
               <div class="col-md-8" style="text-align: left;">
-                <p class="fw-light">
-                  jorge_l.pedraza@yahoo.com.mx </p>
+                <a href="mailto:jorge_l.pedraza@yahoo.com.mx" style="text-decoration: none; color: rgb(84, 84, 255);">
+                  <p class="fw-light">
+                    jorge_l.pedraza@yahoo.com.mx
+                  </p>
+                </a>
               </div>
             </div>
           </div>
@@ -315,7 +344,7 @@
           <h4 class="display-4 fw-bold">Keep in touch!</h4>
         </div>
         <div class="col-6 col-lg-6 cta-info display-4 footer-sm ">
-          <a href="https://github.com/JorgePedraza2019"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/JorgePedraza2019" target="_blank"><i class="fab fa-github"></i></a>
           <a href="https://www.linkedin.com/in/jorge-luis-pedraza-valdez-309878152/" target="_blank"><i
               class="fab fa-linkedin"></i></a>
           <a href="mailto:jorge_l.pedraza@yahoo.com.mx"><svg style='margin-top: -7px; margin-left: 10px;'
@@ -391,7 +420,7 @@
   <script type="text/javascript">
     const lightbox = GLightbox({
       'touchNavigation': true,
-      'href': 'https://www.youtube.com/watch?v=J9lS14nM1xg',
+      'href': 'https://www.youtube.com/watch?v=nFQm0VqfUu4',
       'type': 'video',
       'source': 'youtube', //vimeo, youtube or local
       'width': 900,
