--- a/projects/eyeExercise/index.html
+++ b/projects/eyeExercise/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Jorge Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="./images/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="../../images/favicon.svg">
     <link rel="stylesheet" href="../../assets/css/style.css">
     <link rel="stylesheet" href="../../assets/css/fontawesome.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
@@ -57,13 +57,11 @@
                     <h3 class="display-2">
                         <span class="display-2--intro">Eye Project</span>
                         <span class="display-2--description lh-base" style="font-size: 25px;">
-                            This project displays a Pacman moving left to right and viceversa.
-                            The project purpose is to see the Pacman moving across the display while using javascript
-                            variables, arrays, functions, and conditionals.
+                            This project displays two eyes that follow your mouse movement. This activity brings together skills in JavaScript and CSS to create this dynamic experience.
                             To run the project, the index.html file must be opened in a browser.
                         </span>
                     </h3>
-                    <a href="https://github.com/JorgePedraza2019/Pacman" target="_blank" style="text-decoration: none">
+                    <a href="https://github.com/JorgePedraza2019/Eye-Movement-Exercise" target="_blank" style="text-decoration: none">
                         <button type="button" class="rounded-pill btn-rounded">Go to GitHub Code
                             <span><i class="fas fa-arrow-right"></i></span>
                         </button>
@@ -72,7 +70,7 @@
                 <!-- START THE CONTENT FOR THE VIDEO -->
                 <div class="col-md-6 intros text-end">
                     <iframe width="90%" height="450"
-                        src="https://www.youtube.com/embed/iJKCj8uAHz8?autoplay=1&mute=1&loop=1">
+                        src="https://www.youtube.com/embed/pi7ANpUn-RI?autoplay=1&mute=1&loop=1">
                     </iframe>
                 </div>
             </div>
