Updates removing unnecessary files

--- a/index.html
+++ b/index.html
@@ -162,94 +162,103 @@
               Microsoft Office
             </p>
             <div class="row">
-            <div class="col-md-4">
-              <h3 style="margin-top: 30px;">Contact</h3>
-            </div>
-            <div class="col-md-8" style="margin-top: 20px; font-size: calc(1.475rem + 1.7vw);" >
-              <a href="https://github.com/JorgePedraza2019" target="_blank"><i class="fab fa-github" style="color: gray;"></i></a>
-              <a href="https://www.linkedin.com/in/jorge-luis-pedraza-valdez-309878152/" target="_blank"><i
-                  class="fab fa-linkedin" style="color: gray;"></i></a>
-              <a href="mailto:jorge_l.pedraza@yahoo.com.mx"><svg style='margin-top: -14px;'
-                  class="contact-box__icon footer-sm display-4 " xmlns="http://www.w3.org/2000/svg"
-                  class="icon icon-tabler icon-tabler-mail-opened" viewBox="0 0 24 24" stroke-width="1" fill="none"
-                  stroke-linecap="round" stroke-linejoin="round">
-                  <path stroke="none" d="M0 0h24v24H0z" fill="gray" />
-                  <polyline points="3 9 12 15 21 9 12 3 3 9" />
-                  <path d="M21 9v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10" />
-                  <line x1="3" y1="19" x2="9" y2="13" />
-                  <line x1="15" y1="13" x2="21" y2="19" />
-                </svg>
-              </a>
-            </div>
-            <div class="row">
-              <div class="col-md-4" style="margin-top: 20px;">
-                <p style="font-weight: 500;">
-                  GitHub username:
-                </p>
-              </div>
-              <div class="col-md-8" style="text-align: left;">
-                <a href="https://github.com/JorgePedraza2019" style="text-decoration: none; color: rgb(84, 84, 255);"
-                  target="_blank">
-                  <p class="fw-light" style="margin-top: 20px;">
-                    JorgePedraza2019
-                  </p>
-                </a>
-              </div>
-            </div>
-            <div class="row">
               <div class="col-md-4">
-                <p style="font-weight: 500;">
-                  LinkedIn link:
-                </p>
+                <h3 style="margin-top: 30px;">Contact</h3>
               </div>
-              <div class="col-md-8" style="text-align: left;">
-                <a href="https://www.linkedin.com/in/jorge-luis-pedraza-valdez-309878152/"
-                  style="text-decoration: none; color: rgb(84, 84, 255);" target="_blank">
-                  <p class="fw-light">
-                    https://www.linkedin.com/in/jorge-luis-pedraza-valdez-309878152/
-                  </p>
+              <div class="col-md-8 contact-sm" style="margin-top: 20px; font-size: calc(1.475rem + 1.7vw);">
+                <a href="https://github.com/JorgePedraza2019" target="_blank"><i class="fab fa-github"
+                    ></i></a>
+                <a href="https://www.linkedin.com/in/jorge-luis-pedraza-valdez-309878152/" target="_blank"><i
+                    class="fab fa-linkedin"></i></a>
+                <a href="mailto:jorge_l.pedraza@yahoo.com.mx"><svg style='margin-top: -14px;'
+                    class="contact-box__icon footer-sm display-4 " xmlns="http://www.w3.org/2000/svg"
+                    class="icon icon-tabler icon-tabler-mail-opened" viewBox="0 0 24 24" stroke-width="1" fill="none"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="#389ef5" />
+                    <polyline points="3 9 12 15 21 9 12 3 3 9" />
+                    <path d="M21 9v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10" />
+                    <line x1="3" y1="19" x2="9" y2="13" />
+                    <line x1="15" y1="13" x2="21" y2="19" />
+                  </svg>
                 </a>
               </div>
-            </div>
-            <div class="row">
-              <div class="col-md-4">
-                <p style="font-weight: 500;">
-                  Email:
-                </p>
-              </div>
-              <div class="col-md-8" style="text-align: left;">
-                <a href="mailto:jorge_l.pedraza@yahoo.com.mx" style="text-decoration: none; color: rgb(84, 84, 255);">
-                  <p class="fw-light">
-                    jorge_l.pedraza@yahoo.com.mx
+              <div class="row">
+                <div class="col-md-4" style="margin-top: 20px;">
+                  <p style="font-weight: 500;">
+                    GitHub username:
                   </p>
-                </a>
+                </div>
+                <div class="col-md-8" style="text-align: left;">
+                  <a href="https://github.com/JorgePedraza2019"
+                    style="text-decoration: none; color: rgb(109, 127, 218); font-style: oblique;" target="_blank"
+                    >
+                    <p style="margin-top: 20px;">
+                      <b>
+                        JorgePedraza2019
+                      </b>
+                    </p>
+                  </a>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-4">
+                  <p style="font-weight: 500;">
+                    LinkedIn link:
+                  </p>
+                </div>
+                <div class="col-md-8" style="text-align: left;">
+                  <a href="https://www.linkedin.com/in/jorge-luis-pedraza-valdez-309878152/"
+                    style="text-decoration: none; color: rgb(109, 127, 218); font-style: oblique;" target="_blank">
+                    <p>
+                      <b>
+                        https://www.linkedin.com/in/jorge-luis-pedraza-valdez-309878152/
+                      </b>
+                    </p>
+                  </a>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-4">
+                  <p style="font-weight: 500;">
+                    Email:
+                  </p>
+                </div>
+                <div class="col-md-8" style="text-align: left;">
+                  <a href="mailto:jorge_l.pedraza@yahoo.com.mx"
+                    style="text-decoration: none; color: rgb(109, 127, 218); font-style: oblique;">
+                    <p>
+                      <b>
+                        jorge_l.pedraza@yahoo.com.mx
+                      </b>
+                    </p>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <!-- START THE CONTENT FOR THE SERVICES  -->
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 services mt-4 text-end">
-          <div class="services__pic">
-            <img src="images/services/service-1.png" width='90%' alt="marketing illustration" class="img-fluid">
+      <!-- START THE CONTENT FOR THE SERVICES  -->
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 services mt-4 text-end">
+            <div class="services__pic">
+              <img src="images/services/service-1.png" width='90%' alt="marketing illustration" class="img-fluid">
+            </div>
           </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 services mt-4 text-end">
-          <div class="services__pic">
-            <img src="images/services/service-2.png" width='90%' alt="marketing illustration" class="img-fluid">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 services mt-4 text-end">
+            <div class="services__pic">
+              <img src="images/services/service-2.png" width='90%' alt="marketing illustration" class="img-fluid">
+            </div>
           </div>
-        </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 services mt-4 text-end">
-          <div class="services__pic">
-            <img src="images/services/service-3.png" width='90%' alt="marketing illustration" class="img-fluid">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 services mt-4 text-end">
+            <div class="services__pic">
+              <img src="images/services/service-3.png" width='90%' alt="marketing illustration" class="img-fluid">
+            </div>
           </div>
         </div>
       </div>
-    </div>
     </div>
   </section>
 
