--- a/projects/pacmanExercise/index.html
+++ b/projects/pacmanExercise/index.html
@@ -121,7 +121,7 @@
                 <div class="row text-center text-white">
                     <div class="col-12">
                         <div class="footer-bottom__copyright">
-                            &COPY; Copyright 2021 | Created by <a href="http://codewithpatrick.com"
+                            &COPY; Copyright 2021 | Created by <a href="https://github.com/MuriungiPatrick/Bootstrap-5-portfolio-template"
                                 target="_blank">Muriungi</a>
                         </div>
                     </div>
